--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     
     <version>1.0.1</version>
     <name>signature-widget</name>
-    <description>Polymer 3 wrap around Signature Pad (https://github.com/szimek/signature_pad) for Vaadin 14</description>
+    <description>Polymer 3 wrap around Signature Pad (https://github.com/szimek/signature_pad) for Vaadin 14+</description>
 
     <properties>
         <vaadin.version>14.4.6</vaadin.version>
@@ -88,7 +88,7 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <!-- Replace artifactId with vaadin-core to use only free components -->
-            <artifactId>vaadin</artifactId>
+            <artifactId>vaadin-core</artifactId>
             <exclusions>
                 <!-- Webjars are only needed when running in Vaadin 13 compatibility mode in V14.
                      Your add-on can support npm in the same version mode and V13 compatiblity mode at the same time,
