--- a/package.json
+++ b/package.json
@@ -1,126 +1,115 @@
 {
   "name": "no-name",
   "license": "UNLICENSED",
-  "dependencies": {
-    "@polymer/polymer": "3.4.1",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "@vaadin/vaadin-crud": "1.3.0",
-    "@vaadin/vaadin-grid": "5.7.7",
-    "@vaadin/vaadin-icons": "4.3.2",
-    "@vaadin/vaadin-split-layout": "4.3.0",
-    "@vaadin/vaadin-combo-box": "5.4.7",
-    "@vaadin/vaadin-cookie-consent": "2.0.0",
-    "@vaadin/vaadin-core-shrinkwrap": "14.4.6",
-    "@vaadin/vaadin-upload": "4.4.1",
-    "@vaadin/vaadin-dialog": "2.5.2",
-    "@vaadin/vaadin-select": "2.4.0",
-    "@vaadin/vaadin-app-layout": "2.2.0",
-    "@vaadin/vaadin-item": "2.3.0",
-    "@vaadin/vaadin-board": "2.2.0",
-    "@vaadin/vaadin-notification": "1.6.1",
-    "@vaadin/vaadin-charts": "8.0.1",
-    "@vaadin/vaadin-grid-pro": "2.2.2",
-    "@vaadin/vaadin-progress-bar": "1.3.0",
-    "@vaadin/vaadin-shrinkwrap": "14.4.6",
-    "@vaadin/vaadin-date-time-picker": "1.4.0",
-    "@vaadin/vaadin-ordered-layout": "1.4.0",
-    "@vaadin/vaadin-login": "1.2.0",
-    "@vaadin/vaadin-button": "2.4.0",
-    "@vaadin/vaadin-date-picker": "4.4.1",
-    "@vaadin/vaadin-text-field": "2.8.2",
-    "@vaadin/vaadin-menu-bar": "1.2.1",
-    "@vaadin/vaadin-custom-field": "1.3.0",
-    "@vaadin/vaadin-form-layout": "2.3.0",
-    "@polymer/iron-list": "3.1.0",
-    "@vaadin/vaadin-accordion": "1.2.0",
-    "@vaadin/vaadin-confirm-dialog": "1.3.0",
-    "@vaadin/vaadin-list-box": "1.4.0",
-    "@vaadin/vaadin-details": "1.2.0",
-    "@vaadin/vaadin-checkbox": "2.5.0",
-    "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "2.4.0",
-    "@vaadin/vaadin-context-menu": "4.5.0",
-    "@vaadin/vaadin-tabs": "3.2.0",
-    "@vaadin/vaadin-radio-button": "1.5.1",
-    "@vaadin/vaadin-lumo-styles": "1.6.1",
-    "@vaadin/vaadin-material-styles": "1.3.2",
-    "@vaadin/vaadin-rich-text-editor": "1.3.0",
-    "lit-element": "^2.2.1",
-    "signature_pad": "3.0.0-beta.4"
-  },
-  "devDependencies": {
-    "webpack": "4.46.0",
-    "webpack-cli": "4.5.0",
-    "webpack-dev-server": "3.11.2",
-    "webpack-babel-multi-target-plugin": "2.3.3",
-    "copy-webpack-plugin": "6.4.1",
-    "webpack-merge": "5.7.3",
-    "raw-loader": "3.1.0",
-    "compression-webpack-plugin": "4.0.1",
-    "terser": "5.5.1",
-    "chokidar": "^3.4.0"
-  },
   "vaadin": {
     "dependencies": {
-      "@polymer/polymer": "3.4.1",
+      "lit-element": "2.4.0",
+      "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10",
-      "@vaadin/vaadin-crud": "1.3.0",
-      "@vaadin/vaadin-grid": "5.7.7",
       "@vaadin/vaadin-icons": "4.3.2",
+      "@vaadin/vaadin-grid": "5.7.11",
       "@vaadin/vaadin-split-layout": "4.3.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
-      "@vaadin/vaadin-cookie-consent": "2.0.0",
-      "@vaadin/vaadin-core-shrinkwrap": "14.4.6",
+      "@vaadin/vaadin-cookie-consent": "1.2.0",
+      "@vaadin/vaadin-core-shrinkwrap": "14.5.1",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
       "@vaadin/vaadin-app-layout": "2.2.0",
       "@vaadin/vaadin-item": "2.3.0",
-      "@vaadin/vaadin-board": "2.2.0",
       "@vaadin/vaadin-notification": "1.6.1",
-      "@vaadin/vaadin-charts": "8.0.1",
-      "@vaadin/vaadin-grid-pro": "2.2.2",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "14.4.6",
       "@vaadin/vaadin-date-time-picker": "1.4.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
       "@vaadin/vaadin-button": "2.4.0",
       "@vaadin/vaadin-date-picker": "4.4.1",
-      "@vaadin/vaadin-text-field": "2.8.2",
-      "@vaadin/vaadin-menu-bar": "1.2.1",
+      "@vaadin/vaadin-text-field": "2.8.4",
+      "@vaadin/vaadin-menu-bar": "1.2.2",
       "@vaadin/vaadin-custom-field": "1.3.0",
       "@vaadin/vaadin-form-layout": "2.3.0",
       "@polymer/iron-list": "3.1.0",
       "@vaadin/vaadin-accordion": "1.2.0",
-      "@vaadin/vaadin-confirm-dialog": "1.3.0",
       "@vaadin/vaadin-list-box": "1.4.0",
-      "@vaadin/vaadin-details": "1.2.0",
       "@vaadin/vaadin-checkbox": "2.5.0",
+      "@vaadin/vaadin-details": "1.2.0",
       "@polymer/iron-icon": "3.0.1",
       "@vaadin/vaadin-time-picker": "2.4.0",
+      "signature_pad": "3.0.0-beta.4",
+      "@vaadin/vaadin-avatar": "1.0.4",
       "@vaadin/vaadin-context-menu": "4.5.0",
-      "@vaadin/vaadin-tabs": "3.2.0",
       "@vaadin/vaadin-radio-button": "1.5.1",
-      "@vaadin/vaadin-lumo-styles": "1.6.1",
-      "@polymer/paper-slider": "^3.0.1",
-      "@vaadin/vaadin-material-styles": "1.3.2",
-      "@vaadin/vaadin-rich-text-editor": "1.3.0",
-      "lit-element": "^2.2.1",
-      "signature_pad": "3.0.0-beta.4"
+      "@vaadin/vaadin-tabs": "3.2.0",
+      "@vaadin/vaadin-lumo-styles": "1.6.0",
+      "@vaadin/vaadin-material-styles": "1.3.2"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
-      "copy-webpack-plugin": "6.4.1",
+      "copy-webpack-plugin": "5.1.2",
       "compression-webpack-plugin": "4.0.1",
       "raw-loader": "3.1.0",
-      "webpack-cli": "4.5.0",
-      "webpack": "4.46.0",
-      "terser": "5.5.1",
-      "webpack-merge": "5.7.3",
-      "webpack-dev-server": "3.11.2",
-      "chokidar": "^3.4.0"
+      "webpack-cli": "3.3.11",
+      "webpack": "4.42.0",
+      "ts-loader": "8.0.12",
+      "chokidar": "^3.5.0",
+      "webpack-merge": "4.2.2",
+      "typescript": "4.0.3",
+      "webpack-dev-server": "3.11.0"
     },
-    "hash": "4dfe318bf83ec54d65185ae2798271a7fd6afcabee6efb724df8f173b9a3d6b0"
+    "hash": "cc909552d3e7e5ea4336059aa81f6168a1182cdf4db15ee75650f515eea5d269"
+  },
+  "dependencies": {
+    "lit-element": "2.4.0",
+    "@polymer/polymer": "3.2.0",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "@vaadin/vaadin-icons": "4.3.2",
+    "@vaadin/vaadin-grid": "5.7.11",
+    "@vaadin/vaadin-split-layout": "4.3.0",
+    "@vaadin/vaadin-combo-box": "5.4.7",
+    "@vaadin/vaadin-cookie-consent": "1.2.0",
+    "@vaadin/vaadin-core-shrinkwrap": "14.5.1",
+    "@vaadin/vaadin-upload": "4.4.1",
+    "@vaadin/vaadin-dialog": "2.5.2",
+    "@vaadin/vaadin-select": "2.4.0",
+    "@vaadin/vaadin-app-layout": "2.2.0",
+    "@vaadin/vaadin-item": "2.3.0",
+    "@vaadin/vaadin-notification": "1.6.1",
+    "@vaadin/vaadin-progress-bar": "1.3.0",
+    "@vaadin/vaadin-date-time-picker": "1.4.0",
+    "@vaadin/vaadin-ordered-layout": "1.4.0",
+    "@vaadin/vaadin-login": "1.2.0",
+    "@vaadin/vaadin-button": "2.4.0",
+    "@vaadin/vaadin-date-picker": "4.4.1",
+    "@vaadin/vaadin-text-field": "2.8.4",
+    "@vaadin/vaadin-menu-bar": "1.2.2",
+    "@vaadin/vaadin-custom-field": "1.3.0",
+    "@vaadin/vaadin-form-layout": "2.3.0",
+    "@polymer/iron-list": "3.1.0",
+    "@vaadin/vaadin-accordion": "1.2.0",
+    "@vaadin/vaadin-list-box": "1.4.0",
+    "@vaadin/vaadin-checkbox": "2.5.0",
+    "@vaadin/vaadin-details": "1.2.0",
+    "@polymer/iron-icon": "3.0.1",
+    "@vaadin/vaadin-time-picker": "2.4.0",
+    "signature_pad": "3.0.0-beta.4",
+    "@vaadin/vaadin-avatar": "1.0.4",
+    "@vaadin/vaadin-context-menu": "4.5.0",
+    "@vaadin/vaadin-radio-button": "1.5.1",
+    "@vaadin/vaadin-tabs": "3.2.0",
+    "@vaadin/vaadin-lumo-styles": "1.6.0",
+    "@vaadin/vaadin-material-styles": "1.3.2"
+  },
+  "devDependencies": {
+    "webpack-babel-multi-target-plugin": "2.3.3",
+    "copy-webpack-plugin": "5.1.2",
+    "compression-webpack-plugin": "4.0.1",
+    "raw-loader": "3.1.0",
+    "webpack-cli": "3.3.11",
+    "webpack": "4.42.0",
+    "ts-loader": "8.0.12",
+    "chokidar": "^3.5.0",
+    "webpack-merge": "4.2.2",
+    "typescript": "4.0.3",
+    "webpack-dev-server": "3.11.0"
   }
 }
