--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <groupId>de.f0rce.signaturepad</groupId>
     <artifactId>signature-widget</artifactId>
     
-    <version>1.0.1</version>
+    <version>2.0.0</version>
     <name>signature-widget</name>
-    <description>Polymer 3 wrap around Signature Pad (https://github.com/szimek/signature_pad) for Vaadin 14+</description>
+    <description>Lit-Element wrap around Signature Pad (https://github.com/szimek/signature_pad) for Vaadin 14+</description>
 
     <properties>
-        <vaadin.version>14.4.6</vaadin.version>
+        <vaadin.version>14.5.1</vaadin.version>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -32,7 +32,7 @@
         <dependencies>
             <dependency>
                 <groupId>com.vaadin</groupId>
-                <artifactId>vaadin-core</artifactId>
+                <artifactId>vaadin</artifactId>
                 <type>pom</type>
                 <scope>import</scope>
                 <version>${vaadin.version}</version>
